--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="images/lead-polka.jpg" class="lead__image" alt="полка">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
-            <section class="intro">
+            <section class="intro page__section">
                 <h1 class="intro__title">Чего мы там не видели?</h1>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
@@ -34,21 +34,21 @@
                     <li>Аэропортов 241</li>
                 </ul>
             </section>
-            <section class="photo-grid">
-                <img src="images/photo-grid-train.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-sochi.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-arisa.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-baikal.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-kondratiev.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Картинка">
-                <img src="images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Картинка">
+            <section class="photo-grid page__section" >
+                <img src="images/photo-grid-train.jpg" class="photo-grid__item" alt="Поезд">
+                <img src="images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item" alt="Горы">
+                <img src="images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Туман">
+                <img src="images/photo-grid-sochi.jpg" class="photo-grid__item" alt="Сочи">
+                <img src="images/photo-grid-arisa.jpg" class="photo-grid__item" alt="Ариса">
+                <img src="images/photo-grid-baikal.jpg" class="photo-grid__item" alt="Байкал">
+                <img src="images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
+                <img src="images/photo-grid-kondratiev.jpg" class="photo-grid__item" alt="Кондратьев">
+                <img src="images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Камчатка">
+                <img src="images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка-2">
+                <img src="images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Байкал-2">
+                <img src="images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки">
             </section>
-            <section class="places">
+            <section class="places page__section">
                 <div class="place">
                     <h1 class="places__title">Куршская коса</h1>
                     <div class="places__website">
@@ -106,16 +106,18 @@
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
             </section>
-            <section class="cover">
+            
+            <section class="cover page__section">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
-                    <div class="cover__overlay">
-                        <h1 class="cover__title">До Байкала «на собаках»</h1>
-                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                    </div>
+                <div class="cover__background">
+                    <h1 class="cover__title">До Байкала «на собаках»</h1>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                    <div class="cover__overlay"></div>
+                </div>
                 </a>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer page__section">
             <nav class="footer__menu">
                 <a class="footer__menu__item" href="https://yandex.ru/maps" target="_blank"><li></li>Карты</a>
                 <a class="footer__menu__item" href="https://yandex.ru/pogoda" target="_blank"><li></li>Погода</a>
@@ -123,7 +125,7 @@
                 <a class="footer__menu__item" href="https://calendar.yandex.ru" target="_blank"><li></li>Календарь</a>
                 <a class="footer__menu__item" href="https://travel.yandex.ru" target="_blank"><li></li>Путешествия</a>
             </nav>
-            <p class="footer__author">&copy; 2021. Шипилов Кирилл</p>
+            <p>&copy; 2021. Шипилов Кирилл</p>
         </footer>
     </div>
 </body>
