--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>Путешествие по России</title>
 </head>
-<body>
+<body class="body">
     <div class="page">
-        <header class="header">
-            <img src="images/header-logo.svg" class="header__logo">
-            <div class="header__lang-link">
-                <p class="header__lang-link_active">Ru</p>
-                <p class="header__lang-link_not-active">En</p>
-            </div>
+        <header class="header page__section__width_large">
+            <img src="images/header-logo.svg" class="header__logo" alt="Логотип">
+            <ul class="header__lang-link">
+                <li><a href="#" class="header__lang-link_active">Ru</a></li>
+                <li><a href="#" class="header__lang-link_not-active">En</a></li>
+            </ul>
         </header>
         <main>
-            <section class="lead">
+            <section class="lead page__section__width_small">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
                 <img src="images/lead-polka.jpg" class="lead__image" alt="полка">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
-            <section class="intro page__section">
+            <section class="intro page__section page__section__width_small">
                 <h1 class="intro__title">Чего мы там не видели?</h1>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
@@ -34,7 +34,7 @@
                     <li>Аэропортов 241</li>
                 </ul>
             </section>
-            <section class="photo-grid page__section" >
+            <section class="photo-grid page__section page__section__width_large" >
                 <img src="images/photo-grid-train.jpg" class="photo-grid__item" alt="Поезд">
                 <img src="images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item" alt="Горы">
                 <img src="images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Туман">
@@ -48,76 +48,73 @@
                 <img src="images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Байкал-2">
                 <img src="images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Ергаки">
             </section>
-            <section class="places page__section">
+            <section class="places page__section page__section__width_small">
                 <div class="place">
-                    <h1 class="places__title">Куршская коса</h1>
-                    <div class="places__website">
+                    <h1 class="place__title">Куршская коса</h1>
+                    <div class="place__website">
                         <p class="place_website_url-heading">URL</p>
                         <a href="" class="place__website__link">park-kosa.ru</a>
                     </div>
-                    <img class="places__image" src="images/place-kosa.jpg">
-                    <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                    <p class="places__text-two">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                    <img class="place__image" src="images/place-kosa.jpg">
+                    <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                    <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                 </div>
                 <div class="place">
-                    <h1 class="places__title">Кольский</h1>
+                    <h1 class="place__title">Кольский</h1>
                     <div class="places__website">
                         <p class="place_website_url-heading">URL</p>
                         <a href="" class="place__website__link">National Geographic</a>
                     </div>
-                    <img class="places__image" src="images/place-kolsky.jpg">
-                    <p class="places__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
+                    <img class="place__image" src="images/place-kolsky.jpg">
+                    <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                         тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                    <p class="places__text-two">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                    <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                         в Мурманск.</p>
                 </div>
                 <div class="place">
-                    <h1 class="places__title">Алтай</h1>
-                    <div class="places__website">
+                    <h1 class="place__title">Алтай</h1>
+                    <div class="place__website">
                         <p class="place_website_url-heading">URL</p>
                         <a href="" class="place__website__link">Facebook</a>
                     </div>
-                    <img class="places__image" src="images/place-altai.jpg">
-                    <p class="places__text">Алтай — одно из красивейших мест в России. 
+                    <img class="place__image" src="images/place-altai.jpg">
+                    <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-                    <p class="places__text-two">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                    <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
                 <div class="place">
-                    <h1 class="places__title">Зимний Байкал</h1>
-                    <div class="places__website">
+                    <h1 class="place__title">Зимний Байкал</h1>
+                    <div class="place__website">
                         <p class="place_website_url-heading">URL</p>
                         <a href="" class="place__website__link">https://vk.com/baikalmile</a>
                     </div>
-                    <img class="places__image" src="images/place-winter-baikal.jpg">
-                    <p class="places__text">Всем известен Байкал как крупнейшее озеро 
+                    <img class="place__image" src="images/place-winter-baikal.jpg">
+                    <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                    <p class="places__text-two">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+                    <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
                         к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
                 <div class="place">
-                    <h1 class="places__title">Карелия</h1>
-                    <div class="places__website">
+                    <h1 class="place__title">Карелия</h1>
+                    <div class="place__website">
                         <p class="place_website_url-heading">URL</p>
                         <a href="" class="place__website__link">http://vodlozero.ru/</a>
                     </div>
-                    <img class="places__image" src="images/place-karelia.jpg">
-                    <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+                    <img class="place__image" src="images/place-karelia.jpg">
+                    <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
             </section>
             
-            <section class="cover page__section">
+            <section class="cover page__section page__section__width_large">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
-                <div class="cover__background">
-                    <h1 class="cover__title">До Байкала «на собаках»</h1>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                    <div class="cover__overlay"></div>
-                </div>
                 </a>
             </section>
         </main>
-        <footer class="footer page__section">
+        <footer class="footer page__section page__section__width_large">
             <nav class="footer__menu">
                 <a class="footer__menu__item" href="https://yandex.ru/maps" target="_blank"><li></li>Карты</a>
                 <a class="footer__menu__item" href="https://yandex.ru/pogoda" target="_blank"><li></li>Погода</a>
