--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
         <footer class="footer page__section page__section__width_large">
             <nav>
                 <ul class="footer__menu">
-                    <li><a class="footer__menu__item" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-                    <li><a class="footer__menu__item" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-                    <li><a class="footer__menu__item" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-                    <li><a class="footer__menu__item" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-                    <li><a class="footer__menu__item" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+                    <li class="footer__menu__item"><a class="footer__menu__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+                    <li class="footer__menu__item"><a class="footer__menu__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+                    <li class="footer__menu__item"><a class="footer__menu__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+                    <li class="footer__menu__item"><a class="footer__menu__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+                    <li class="footer__menu__item"><a class="footer__menu__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
                 </ul>
             </nav>
             <p class="footer__autor">&copy; 2021. Шипилов Кирилл</p>
