--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </section>
             <section class="places page__section">
                 <article class="place">
-                    <h2 class="place__title">Куршская коса</h2>
+                    <h2 class="place__title">Куршская<br>коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="" class="place__link">park-kosa.ru</a>
